# aish

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.agents/skills/aish/: SKILL.md
.claude/: ecc-tools.json  identity.json
.claude/commands/: add-provider-adapter.md  extend-config-logic.md  feature-development.md  project-governance-foundation-update.md
.codex/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  ci.yml  dco.yml  release.yml
docs/adr/: 0001-no-plugin-architecture.md
docs/superpowers/plans/: 2026-06-04-aish-mvp.md  2026-06-05-plugin-system.md
scripts/: publish-release.sh
src/: audit.rs  cache.rs  cli.rs  editor.rs  git.rs  lib.rs  main.rs  uninstall.rs  update.rs  usage.rs
src/commands/: ask.rs  cache.rs  changelog.rs  commit.rs  config.rs  fix.rs  generate.rs  mod.rs  pr.rs  review.rs  run.rs  setup.rs  uninstall.rs  update.rs
src/config/: mod.rs  resolve.rs
src/plugin/: host.rs  install.rs  manifest.rs  mod.rs  prebuilt.rs  protocol.rs  services.rs
src/provider/: anthropic.rs  gemini.rs  http.rs  mock.rs  mod.rs  openai.rs  retry.rs
src/tool/: ask.rs  changelog.rs  commit.rs  fix.rs  mod.rs  pr.rs  review.rs  run.rs
tests/: ask_e2e.rs  cache_e2e.rs  changelog_e2e.rs  commit_e2e.rs  completions_e2e.rs  config_ping_e2e.rs  fix_e2e.rs  host_loop.rs  plugin_e2e.rs  pr_e2e.rs  review_e2e.rs  run_e2e.rs  setup_e2e.rs  update_uninstall_e2e.rs
(+9 files in other folders)
