[package]
name = "aish"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "AI copilot for your command line"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
dirs = "5"
clap_complete = "4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
wiremock = "0.6"
predicates = "3"
serial_test = "3"
